Fix overlapping node values

--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -50,7 +50,7 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, 95%);
+  transform: translate(-50%, 85%);
   height: 50%;
   width: 80%;
   color: rgb(216, 216, 216);
